--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+    <div class="container">
 
-  Capture and Share the World's Moments
+        <div id="leftBlock">
+            <img src="./images/phones.png" alt="phones image">
+        </div>
+    
+        <div id="rightBlock">
+            <header>
+                <img src="./images/brand.png" alt=" instagram logo">
+                <a id="btn-login" href="#">
+                    <img src="./images/home.png" alt="home icon">
+                    <span>Log In</span>
+                </a>
+            </header>
+            <section>
+                <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+                <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+                <p>Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+                <div id="btn-apps">
+                    <img src="./images/badge-iphone.png" alt="iphone app image">
+                    <img src="./images/badge-android.png" alt="android app image">
+                </div>
+            </section>      
+        </div>
+        
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <footer>
+        <a href="#">About Us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
 
-  &copy; 2014 Instagram
+        <span>&copy; 2014 Instagram</span>
+    </footer>
 </body>
 </html>
