--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+  <title>Instagram_clone</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="main-square">
+    <div id="phone">
+      <img src="./images/phones.png" alt="phone-img">
+    </div>
 
-  Capture and Share the World's Moments
+    <div id="next-to-phone">
+      <section id="login-bar">
+        <img src="./images/brand.png" alt="brand-img">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div>
+          <img src="./images/home.png" alt="house login">
+          <p><a href="#">Log in</a></p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </div>
+      </section>
 
-  Oh yeah, did we mention it's free?
+      <section id="below-login-bar">
+        <h1>Capture and Share the World's Moments</h1>
 
-  Download on the App Store
-  Get it on Google Play
+        <p>Instagram is a <em>fast</em>, <em>beautiful</em> and <em>fun</em> way to share your life with friends and family.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      
+        <p>Oh yeah, did we mention it's free?</p>
 
-  &copy; 2014 Instagram
+        <div>
+          <img src="images/badge-iphone.png" alt="app store">
+
+          <img src="images/badge-android.png" alt="android">
+        </div>
+      </section>
+    </div>
+  </div>
+
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+
+    <div>
+      &copy; 2014 Instagram
+    </div>
+
+  </footer>
+
 </body>
 </html>
