--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css" />
+</head>
+
+<!-- Title and info metas -->
+<title>Landing | Instagram</title>
+<meta name="description" content="Landing de Instagram">
+<meta charset="UTF-8">
+
 </head>
 <body>
-  Instagram
+<header>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+</header>
+<main>
+  <section>
+    <img src="../starter-code/images/phones.png" alt="Phones">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </section>
+  <section>
+    <span class="logos">
+    <img src="../starter-code/images/brand.png" alt= "Instagram Logo">
+    <div>
+      <a class="button-log-in" href="#"><img src="../starter-code/images/home.png">&nbsp;&nbsp;Log In</a>
+    
+    
+  </div>
+    </span>
+    <div class="degraded">
+    <h2>Capture and Share the World's Moments</h2>
+  
+    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<p>
+  
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+  
+    <p>Oh yeah, did we mention it's free?</p>
+  <a>
+    <a href="#"><img src="../starter-code/images/badge-iphone.png" alt="Download Iphone"></a>
+    <a href="#"><img src="../starter-code/images/badge-android.png" alt="Download Android"></a>
+  </p> 
+</div>
+  </section>
+  
+</main>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<footer>
+  <ul>
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">Support</a></li>
+    <li><a href="#">Blog</a></li>
+    <li><a href="#">Press</a></li>
+    <li><a href="#">API</a></li>
+    <li><a href="#">Jobs</a></li>
+    <li><a href="#">Privacy</a></li>
+    <li><a href="#">Terms</a></li>
+    <li><a href="#"><span class="grey">&copy; 2014 Instagram</span></a></li>
+  </ul>
+ 
+</footer>
 </body>
 </html>
