Instagram clone with issues in a tags and log in button

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <section class="allInfo horizontalFlex">
+    <figure>
+      <img src="./images/phones.png" alt="IphoneImage">
+    </figure>
 
-  Capture and Share the World's Moments
+    <section class="content verticalFlex">
+      <header class="horizontalFlex">
+        <a href="#" class="instagramLogo"></a>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  
+        <a class="homeLogo" href="#"> <img src="./images/home.png" alt="Home_icon">     Log in</a>
+      </header>
+      <article>
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <em>fast, beautiful </em>and <em>fun </em>way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </article>
+      <aside>
+        <a href="#" class="appStore"></a> 
+        <a href="#" class="googlePlay"></a>  
+      </aside>
+    </section>
+  
+  
+  </section>
+  
+  <footer>
+    <ul class="footerInfo">
+      <li><a href="#">About us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><p> &copy; 2014 Instagram</p></li>
+    </ul>
+  </footer>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
 </body>
 </html>
