--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <main>
 
-  Capture and Share the World's Moments
+    <section class="col one">
+      <img src="images/phones.png" alt="Phones">
+    </section>
+    <section class="col two">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <header>
+        <img src="images/brand.png" alt="Instagram logo">
+        <button><img src="images/home.png" alt="Home icon"> Log in</button>
+      </header>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="main-content">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <div class="links">
+          <a href="javascript:;" target="_blank">
+            <img src="images/badge-iphone.png" alt="Download on the App Store">
+          </a>
+          <a href="javascript:;" target="_blank">
+            <img src="images/badge-android.png" alt="Get it on Google Play">
+          </a>
+        </div>
+      </div>
+    </section>
+    <div class="clearfix"></div>
+  </main>
+  
+  <footer>
+    <nav>
+        <a href="#">About Us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+    </nav>
+    <p class="copyright">&copy; 2014 Instagram</p>
+  </footer>
 </body>
 </html>
