--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <link rel="stylesheet" href="./css/main.css">
+    <title>Instagram</title>
+  </head>
+  <body>
 
-  Capture and Share the World's Moments
+    <div class="horizontal">
+      <section class="phones">
+      <img src="./images/phones.png" alt="Telefonos">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <section class="textInstagram">
+      <header>
+        <figure>
+          <img src="./images/brand.png" alt="Logo Instagram">
+        </figure>
 
-  Oh yeah, did we mention it's free?
+        <a class="home" href="#"><img class="logohome" src="./images/home.png" alt="Log In">Log in</a>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
-</body>
+      </header>
+
+      <h1>Capture and Share the World's Moments</h1>
+
+      <p class="parrafo">Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+
+      <p class="parrafo">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+      <p class="parrafo">Oh yeah, did we mention it's free?</p>
+
+      <div class="download">
+        <a href="#">
+          <img src="./images/badge-iphone.png" alt="Descarga desde App Store">
+        </a>
+  
+        <a class="downloadandroid" href="#">
+          <img src="./images/badge-android.png" alt="Descarga para Android">
+        </a>
+      </div>
+      
+    </section>
+  </div>
+    
+    <footer>
+      <a class="enlace" href="#">About Us</a>
+      <a class="enlace" href="#">Support</a>
+      <a class="enlace" href="#">Blog</a>
+      <a class="enlace" href="#">Press</a>
+      <a class="enlace" href="#">API</a>
+      <a class="enlace" href="#">Jobs</a>
+      <a class="enlace" href="#">Privacy</a>
+      <a class="enlace" href="#">Terms</a>
+      <a class="enlace">&copy; 2014 Instagram</a>
+    </footer>
+
+  </body>
 </html>
