--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -18,11 +18,9 @@
     <img src="images/brand.png" alt="logotipo">
   </a>
 </div>
-<div class="boton">
-  <a href="#" alt="log-in">
+  <a href="#" alt="log-in" class="boton">
     <img src="images/home.png" alt="log-in">Log In</img>
   </a>
-</div>
 </header>
 
 <article>
