Ahora la imagen home es un enlace

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -16,8 +16,7 @@
         <header>
           <img src="./images/brand.png" alt="Instagram Logo" id="instagram">
           <div class="home-button">
-            <img src="images/home.png" alt="home-icon" id="home">
-            <a href="#">Log in</a>
+            <a href="#"><img src="images/home.png" alt="home-icon" id="home">Log in</a>
           </div>
         </header>
         <div class="white-background">
