--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="information">
                 <h1>Capture and Share the World's Moments</h1>
-                <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+                <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
                 <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
                 <p>Oh yeah, did we mention it's free?</p>
             </div>
