--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -44,8 +44,9 @@
           <li>JOBS</li>
           <li>PRIVACY</li>
           <li>TERMS</li>
+          <li>&copy; 2014 Instagram</li>
         </ul>
-        &copy; 2014 Instagram
+        
       </nav>
 
       
