modified the file sent yesterday

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -37,10 +37,11 @@
           <li>Jobs</li>
           <li>Privacy</li>
           <li>Terms</li>
+          <li>&copy; 2014 Instagram</li>
 
         </ul>
       </nav>
-      <p>&copy; 2014 Instagram</p>
+     
     </footer>
 
 </body>
