--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,44 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <section class= "todo">
+    <img src= "images/phones.png" alt= "Iphones">
+  <section class="texto">
+  <header>
+    <div><img src= "images/brand.png" alt= "Instagram"></div>
+    <div class="boton">
+    <img src= "images/home.png" alt= "Home">
+    <a class="white" href="url">Log in</a>
+  </div>
+     
+  </header>
+  <div class="info">
+  <h2>Capture and Share the World's Moments</h2>
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Capture and Share the World's Moments
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
+  <p>Oh yeah, did we mention it's free?</p>
+<div class="apple"> 
+  <a href="url"><img src= "images/badge-iphone.png" alt= "Apple"></a>
+  <a href="url"><img src= "images/badge-android.png" alt= "Android"></a>
+</div>
+</div>
+</section>
+</section>
+<footer>
+  <a href="#">About Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+    <a href="#">Terms</a>
   &copy; 2014 Instagram
+</footer>
 </body>
 </html>
