--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <section id="left">
+      <div>
+        <img class="phones" src="images/phones.png" alt="phones-img">
+      </div>
+    </section>
+    <section id="right">
 
-  Oh yeah, did we mention it's free?
+      <div class="brand-button">
+        <img class="brand" src="images/brand.png" alt="camera-instagram">
+        <button class="button" type="submit">Log in</button>
+      </div>
+      <article>
+        <h3>Capture and Share the World's Moments</h3>
 
-  Download on the App Store
-  Get it on Google Play
+        Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+        that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  &copy; 2014 Instagram
+        Oh yeah, did we mention it's free?
+
+        Download on the App Store
+        Get it on Google Play
+      </article>
+
+      <div class="download-app">
+        <a href="https://itunes.apple.com/app/instagram/id389801252?pt=428156&ct=igweb.signupPage.badge&mt=8&vt=lo">
+          <img src="images/badge-iphone.png">
+        </a>
+        <a
+          href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26ig_mid%3D45A3E61E-D3DA-4A85-8467-DE9A0982AE03%26utm_content%3Dlo%26utm_medium%3Dbadge">
+          <img src="images/badge-android.png">
+        </a>
+      </div>
+
+
+      </div>
+    </section>
+  </header>
+
+
+  <footer id="footer-bar">
+    <nav>
+      <ul>
+        <li>
+          <a href="#">About us</a>
+        </li>
+        <li>
+          <a href="#">Support</li>
+        <li>
+          <a href="#">Blog</a>
+        </li>
+        <li><a href="#">Press</a>
+        </li>
+        <li>
+          <a href="#">API</a>
+        </li>
+        <li>
+          <a href="#"> Jobs</a>
+        </li>
+        <li>
+          <a href="#">Jobs</a>
+        </li>
+        <li>
+          <a href="#">Privacy</a>
+        </li>
+        <li>
+          <a href="#">Terms</a>
+        </li>
+
+      </ul>
+
+      &copy; 2014 Instagram
+    </nav>
+  </footer>
 </body>
+
 </html>
