--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,69 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+
+  <link rel="stylesheet" type="text/css" href="../starter-code/css/main.css">
 </head>
 <body>
-  Instagram
+<div class='content'>
+<section class='top-section'></section>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
+<div class='phone-image'></div>
+
+
+<div class='header-logo'>
+  <div class='flex-container'>
+  <div class='instagram-logo'></div> <div class='login'><div class='home-image'></div><span class='button'>Log in</span> </div>
+</div>
+
+</div>
+
+<div class='download-box'>
+ <h1> Capture and Share the World's Moments</h1>
+<div class='text-box'>
+  Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>
+  <br>
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
+  <br><br>
   Oh yeah, did we mention it's free?
 
   Download on the App Store
   Get it on Google Play
+</div>
+<div class='iphone-logo'></div>
+<div class='android-logo'></div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+</div>
 
-  &copy; 2014 Instagram
+
+
+</div>
+<div class='footer'>
+<div class="flex-container-center">
+  <ul class='navigation'>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li><span class='grey'>2014 Instagram</span></li>
+  </ul>
+ 
+  
+  
+  
+  
+ 
+  
+  
+
+ 
+</div>
+</div>
 </body>
 </html>
