--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,21 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div>
+    <img src="images/phones.png" alt="">
+    <div>
+      <div>
+        <img src="images/" alt="">
+        <button>
+          <img src="images/home.png" alt="">
+          <span>Log in</span>
+        </button>
+      </div>
+      <div>
+        <div>
+          <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+          <p> Instagram is a <span> fast, beautiful </span>and <span> fun </span>way to share your life with friends and
+            family.
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+            that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            Oh yeah, did we mention it's free?</p>
+        </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
+        <a>
+          <img src="images/badge-iphone.png" alt="">
+        </a>
+        <a>
+          <img src="images/badge-android.png" alt="">
+        </a>
+      </div>
+    </div>
+  </div>
 
   About Us
   Support
@@ -28,4 +50,5 @@
 
   &copy; 2014 Instagram
 </body>
+
 </html>
