--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <!-- starting content -->
+  <div class="container-row">
+    <!-- phones to the left -->
+    <img src="images/phones.png" alt="" class="phones">
+    <!-- logo, login, text to the right -->
+    <div class="container-col">
+      <div class="container-row right-side">
+        <img src="images/" alt="">
+        <button>
+          <img src="images/home.png" alt="">
+          <span>Log in</span>
+        </button>
+      </div>
+      <!-- promotion starts here -->
+      <div class="text-background">
+        <div>
+          <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+          <p> Instagram is a <span> fast, beautiful </span>and <span> fun </span>way to share your life with friends and
+            family.
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+            that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            Oh yeah, did we mention it's free?</p>
+        </div>
 
-  Oh yeah, did we mention it's free?
+        <a>
+          <img src="images/badge-iphone.png" alt="">
+        </a>
+        <a>
+          <img src="images/badge-android.png" alt="">
+        </a>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <div class="container-row">
+      <ul>
+        <li><a href="#aboutus">About Us</a></li>
+        <li><a href="#support">Support</a></li>
+        <li><a href="#blog">Blog</a></li>
+        <li><a href="#press">Press</a></li>
+        <li><a href="#api">API</a></li>
+        <li><a href="#jobs">Jobs</a></li>
+        <li><a href="#privacy">Privacy</a></li>
+        <li><a href="#terms">Terms</a></li>
+        <li class="copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </footer>
 </body>
+
 </html>
