--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="container">
 
-  Oh yeah, did we mention it's free?
+    <div class="main">
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="content"> <img src="images/phones.png" /> </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+      <div class="info content">
+
+        <div class="logos">
+
+          <div> <img src="images/brand.png" alt="Instagram" /> </div>
+
+          <div class="login">
+            <img class="home" src="images/home.png" />
+            <p>Log In</p>
+
+          </div>
+        </div>
+
+        <div class="maintext">
+          <h2>Capture and Share <br />
+            the World's Moments</h2>
+
+          <p>Instagram is a fast, beautiful and fun way to share
+            your life <br />
+            with friends and family. <br />
+
+            Take a picture or video, choose a filter to transform its look <br />
+            and feel, then post to Instagram - it's that easy. You can <br />
+            even share to Facebook, Twitter, Tumblr and more. It's a<br />
+            new way to see the world. <br />
+
+            Oh yeah, did we mention it's free? (You are the product) </p>
+
+
+
+
+          <div class="download">
+            <div class="apple"> <img src="images/badge-iphone.png" /></div>
+            <div> <img src="images/badge-android.png" /> </div>
+          </div>
+        </div>
+
+
+      </div>
+
+
+
+
+
+    </div>
+
+
+
+  </div>
+
+  <div>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li> 2014 Instagram</li>
+    </ul>
+  </div>
+
+
+
 </body>
+
 </html>
