--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="starter-code/css/main.css">
+  <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
 </head>
+
 <body>
-  Instagram
+  <div class="container">
 
-  Capture and Share the World's Moments
+    <div class="Instagram header">
+      <img src="starter-code/images/brand.png" alt="instagram logo"/>
+      <img src="starter-code/images/home.png" alt="home logo"/>
+      Log in
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="iPhone">
+      <img src="starter-code/images/phones.png" alt="iPhone photo"/>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="description">
 
-  Oh yeah, did we mention it's free?
+      <h1>Capture and Share the World's Moments</h1>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+        that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p> Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="downloads">
+        <img src="starter-code/images/badge-iphone.png" alt="iPhone download"/>
+        <img src="starter-code/images/badge-android.png" alt="Android download"/>
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+    </div>
+
+  
+
+  </div>
+  <footer>
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
+    &copy; 2014 Instagram
+  </footer>
+
 </body>
+
 </html>
