--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,71 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
+  <section>
+  <div id="primary">
+
+
+  <div class="container">
+  <img src="images/phones.png">
+  </div>
+
+  <div class="container">
+  <div id="head">
+  <img src="images/brand.png">
+  <button class="button">
+  <img src="images/home.png">
+  log in
+  </button>
+   </div>
+
+
+  <div id="paragraph">
+  <h3>
   Capture and Share the World's Moments
+  </h3>
 
+  <p>
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  </p>
 
+  <p>
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </p>
 
+  <p>
   Oh yeah, did we mention it's free?
+  </p>
 
-  Download on the App Store
-  Get it on Google Play
+  <img src="images/badge-iphone.png">
+  <img src="images/badge-android.png">
+  </div>
+ </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  </div>
 
-  &copy; 2014 Instagram
+  </section>
+
+
+
+
+
+
+  <footer>
+  <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press </li>
+  <li>API </li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li>&copy; 2014 Instagram</li>
+  </ul>
+  </footer>
 </body>
 </html>
