just started, finish tomorrow

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,8 +2,17 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
+
+  <div id="main">
+
+  <div id="phoneimg">
+    <img src="images/phones.png">
+  </div>
+
+  <div id="content"> 
   Instagram
 
   Capture and Share the World's Moments
@@ -16,7 +25,11 @@
 
   Download on the App Store
   Get it on Google Play
+</div>
 
+</div>
+
+  <footer>
   About Us
   Support
   Blog
@@ -27,5 +40,7 @@
   Terms
 
   &copy; 2014 Instagram
+</footer>
+
 </body>
 </html>
