BER-WDPT Edison & Ian

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,29 +2,55 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="main-section">
 
-  Capture and Share the World's Moments
+<div class="left-section">
+  <img src="images/phones.png">
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="right-section">
+
+ 
+  <img src="images/brand.png">
+
+  <a href="#">
+      <div><img src="images/home.png">Log in </div>
+ </a>
+    
+
+
+  <section class="white-box">
+  <h1>Capture and Share the World's Moments</h1>
+  
+  
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?</p>
+</section>
 
-  Download on the App Store
-  Get it on Google Play
+  <div><img src="images/badge-iphone.png"></div>
+  <div><img src="images/badge-android.png"></div>
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  </div>
+
+  <footer>
+    <ul>
+      <li><a href="#">Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+    </ul>
+    </footer> 
 
   &copy; 2014 Instagram
 </body>
