--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <div id="main">
+      <div id="phoneImage">
+        <img src ="images/phones.png">
+      </div>
+      <div id="content">
+        Instagram Capture and Share the World's Moments Instagram is a fast,
+        beautiful and fun way to share your life with friends and family. Take a
+        picture or video, choose a filter to transform its look and feel, then
+        post to Instagram &mdash; it's that easy. You can even share to
+        Facebook, Twitter, Tumblr and more. It's a new way to see the world. Oh
+        yeah, did we mention it's free? Download on the App Store Get it on
+        Google Play
+      </div>
+    </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+    <footer>
+      About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+    </footer>
+  </body>
 </html>
