--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="background">
+    <div class="left-right-box">
+      <section class="left">
+        <img src="./images/phones.png" alt="Phones">
+      </section>
+      <section class="right">
+        <div class="up-content">
+          <img src="./images/brand.png" alt="logo">
+          <div>
+            <button type="button"><img src="./images/home.png" alt="Home">Log in</button>
+          </div>
+        </div>
+        <div class="content">
+          <h1>Capture and Share <br> the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life <br>
+                with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look <br>
+              and feel, then post to Instagram &mdash; it's that easy. You can <br>
+              even share to Facebook, Twitter, Tumblr and more. It's a <br>
+                new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="bottom-content">
+            <img src="./images/badge-iphone.png" alt="Iphone">
+            <img src="./images/badge-android.png" alt="">
+          </div>
+        </div>
 
-  Capture and Share the World's Moments
+      </section>
+      <footer>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </footer>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </div>
 </body>
 </html>
