--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,64 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="main-section">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="left-section">
+      <img src="images/phones.png">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="right-section">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="header-section">
+        <img src="images/brand.png">
+        
+        <a>
+        <button class="button">
+          <img src="images/home.png">
+          <span>Log In</span>
+        </button>
+        </a>
+      </div>
 
-  &copy; 2014 Instagram
+      <div class="right-white">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div>
+          <img src="images/badge-iphone.png">
+          <img src="images/badge-android.png">
+        </div>
+      </div>
+      
+
+
+
+    </div>
+
+  </div>
+  <div class="footer">
+
+    <ul>
+      <li><a>About Us</a></li>
+      <li><a>Support</a></li>
+      <li><a>Blog</a></li>
+      <li><a>Press</a></li>
+      <li><a>API</a></li>
+      <li><a>Jobs</a></li>
+      <li><a>Privacy</a></li>
+      <li><a>Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+
+  </div>
+
+
 </body>
 </html>
