--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="entireDiv">
 
-  Capture and Share the World's Moments
+    <div class="phones">
+      <img src="images/phones.png" alt="phones">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="rightSide">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="rightTop">
+        <div class="top-1"><img src="images/brand.png" alt="brand"></div>
 
-  Oh yeah, did we mention it's free?
+        <div class="top-2"><img src="images/home.png" alt="home">
+          <p>Login</p>
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="rightBottom">
+        <div class="right-text">
+          <h2>Capture and Share the World's Moments</h2>
 
-  &copy; 2014 Instagram
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+            that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+            Oh yeah, did we mention it's free?</p>
+        </div>
+
+        <div class="bottom-buttons">
+          <img src="images/badge-iphone.png" alt="badge-iphone">
+          <img src="images/badge-android.png" alt="badge-android">
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+
+  <div class="footer">
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
+  </div>
+
+  <div class="2014">
+    &copy; 2014 Instagram
+  </div>
 </body>
+
 </html>
