--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -18,8 +18,13 @@
   <div id="head">
   <img src="images/brand.png">
   <button class="button">
+  <div>
   <img src="images/home.png">
-  log in
+  </div>
+
+  <div>
+  Log in
+  </div>
   </button>
    </div>
 
@@ -57,15 +62,15 @@
 
   <footer>
   <ul>
-  <li>About Us</li>
-  <li>Support</li>
-  <li>Blog</li>
-  <li>Press </li>
-  <li>API </li>
-  <li>Jobs</li>
-  <li>Privacy</li>
-  <li>Terms</li>
-  <li>&copy; 2014 Instagram</li>
+  <li><a href="">About Us</a></li>
+  <li><a href="">Support</a></li>
+  <li><a href="">Blog</a></li>
+  <li><a href="">Press</a> </li>
+  <li><a href="">API</a> </li>
+  <li><a href="">Jobs</a></li>
+  <li><a href="">Privacy</a></li>
+  <li><a href="">Terms</a></li>
+  <li><a href="" class="color-grey">&copy; 2014 Instagram</a></li>
   </ul>
   </footer>
 </body>
