Ber wdpt Camille

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" media="(media-features)" href="css/main.css" />
+
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <main>
+    <section id="phone">
+      <img src="../starter-code/images/phones.png">
+    </section>
+  <section id="text">
+    <div id="brand">
+      <img src="images/brand.png">
+      <button>
+        <img id="home" src="images/home.png"> Log in
+      </button>
+    </div>
+    
+    <div id="main-text">
+      <h1>Capture and Share the World's Moments</h1>
+      <p>Instagram is a <em>fast</em>, <em>beautiful</em> and <em>fun</em> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>    
+ 
+      <img src="images/badge-iphone.png">
+      <img src="images/badge-android.png">
+</div>
+</section>
+</main>
+<footer>
+  <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li id="copy">&copy; 2014 Instagram</li>
+</ul>
+</footer>
+  
 </body>
 </html>
