footer fixed, experimenting with the shadow, 80% finished

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,13 +8,14 @@
 
 <body>
   <!-- starting content -->
+  <main>
   <div class="container-row">
     <!-- phones to the left -->
     <img src="images/phones.png" alt="" class="phones">
     <!-- logo, login, text to the right -->
     <div class="container-col">
       <div class="container-row right-side">
-        <img src="images/" alt="">
+        <img src="images/brand.png" alt="">
         <button>
           <img src="images/home.png" alt="">
           <span>Log in</span>
@@ -43,8 +44,8 @@
       </div>
     </div>
   </div>
-  <footer>
-    <div class="container-row">
+</main>
+  <footer class="container-row">
       <ul>
         <li><a href="#aboutus">About Us</a></li>
         <li><a href="#support">Support</a></li>
@@ -56,8 +57,6 @@
         <li><a href="#terms">Terms</a></li>
         <li class="copyright">&copy; 2014 Instagram</li>
       </ul>
-    </div>
-
   </footer>
 </body>
 
