done except button and responsiveness

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <main>
+    <div class="phone-container">
+      <img src="images/phones.png" alt="iphone">
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="info-container">
+      <div class="insta-and-button">
+        <img src="images/brand.png" alt="brand">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div class="login-box">
+          <div><img src="images/home.png" alt="home"></div>
+          <div>Log in</div>
+        </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </div>
 
-  Oh yeah, did we mention it's free?
+      <div class="main-text">
+        <h1>
+          Capture and Share<br>the World's Moments
+        </h1>
+        <article>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br><br>
+          Oh yeah, did we mention it's free?
+        </article>
+        <div class="store-buttons">
+          <img src="images/badge-iphone.png" alt="Download on the App Store">
+          <img src="images/badge-android.png" alt="Get it on Google Play">
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    </div>
 
-  &copy; 2014 Instagram
+  </main>
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li><span>&copy; 2014 Instagram</span></li>
+    </ul>
+  </footer>
 </body>
+
 </html>
