add shadow, fixed login button, correct shadow and better button positioning missing

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,54 +9,58 @@
 <body>
   <!-- starting content -->
   <main>
-  <div class="container-row">
-    <!-- phones to the left -->
-    <img src="images/phones.png" alt="" class="phones">
-    <!-- logo, login, text to the right -->
-    <div class="container-col">
-      <div class="container-row right-side">
-        <img src="images/brand.png" alt="">
-        <button>
-          <img src="images/home.png" alt="">
-          <span>Log in</span>
-        </button>
-      </div>
-      <!-- promotion starts here -->
-      <div class="text-background">
-        <div>
-          <h1>Capture and Share the World's Moments</h1>
-
-          <p> Instagram is a <span> fast, beautiful </span>and <span> fun </span>way to share your life with friends and
-            family.
-
-            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
-            that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-            Oh yeah, did we mention it's free?</p>
+    <div class="container-row">
+      <!-- phones to the left -->
+      <img src="images/phones.png" alt="Picture of two smartphones." class="phones">
+      <!-- logo, login, text to the right -->
+      <section id="login-and-apps" class="container-col">
+        <div class="container-row right-side">
+          <img src="images/brand.png" alt="Logo showing a retro camera and instagram signature.">
+          <button>
+            <img src="images/home.png" alt="Icon with a home.">
+            <span>Log in</span>
+          </button>
         </div>
+        <!-- promotion starts here -->
+        <!--<div class="shadow">-->
+          <div class="text-background">
+            <div>
+              <h1>Capture and Share the World's Moments</h1>
 
-        <a>
-          <img src="images/badge-iphone.png" alt="">
-        </a>
-        <a>
-          <img src="images/badge-android.png" alt="">
-        </a>
-      </div>
+              <p> Instagram is a <strong> fast, beautiful </strong>and <strong> fun </strong>way to share your life with friends
+                and
+                family.
+
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+                it's
+                that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+                Oh yeah, did we mention it's free?</p>
+            </div>
+
+            <a>
+              <img src="images/badge-iphone.png" alt="">
+            </a>
+            <a>
+              <img src="images/badge-android.png" alt="">
+            </a>
+          </div>
+        <!--</div>-->
+      </section>
     </div>
-  </div>
-</main>
+  </main>
   <footer class="container-row">
-      <ul>
-        <li><a href="#aboutus">About Us</a></li>
-        <li><a href="#support">Support</a></li>
-        <li><a href="#blog">Blog</a></li>
-        <li><a href="#press">Press</a></li>
-        <li><a href="#api">API</a></li>
-        <li><a href="#jobs">Jobs</a></li>
-        <li><a href="#privacy">Privacy</a></li>
-        <li><a href="#terms">Terms</a></li>
-        <li class="copyright">&copy; 2014 Instagram</li>
-      </ul>
+    <ul>
+      <li><a href="#aboutus">About Us</a></li>
+      <li><a href="#support">Support</a></li>
+      <li><a href="#blog">Blog</a></li>
+      <li><a href="#press">Press</a></li>
+      <li><a href="#api">API</a></li>
+      <li><a href="#jobs">Jobs</a></li>
+      <li><a href="#privacy">Privacy</a></li>
+      <li><a href="#terms">Terms</a></li>
+      <li class="copyright">&copy; 2014 Instagram</li>
+    </ul>
   </footer>
 </body>
 
