--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,46 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
   <link rel="stylesheet" href="css/main.css" />
 </head>
+
 <body>
 
   <div id="main">
 
-  <div id="phoneimg">
-    <img src="images/phones.png">
+    <div id="phoneimg">
+      <img src="images/phones.png">
+    </div>
+
+    <div id="content">
+      <div id="headline">
+        <img src="images/brand.png" alt="logo" class="iglogo">
+        <button type="button" class="loginbut"><img src="images/home.png"> log in</button>
+        
+      </div>
+
+      <div id="text">
+
+        <h2> Capture and Share <br>
+          the World's Moments </h2>
+
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+        <img src="images/badge-iphone.png" alt="Download on the App Store">
+        <img src="images/badge-android.png" alt="Get it on Google Play">
+
+
+      </div>
+
+    </div>
   </div>
 
-  <div id="content"> 
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-</div>
-
-</div>
-
-  <footer>
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</footer>
+  <div id="footer">
+    <nav>
+      <li> Us</li>
+      <li>Support</li>
+      <li> Blog</li>
+      <li> Press</li>
+      <li> API</li>
+      <li> Jobs</li>
+      <li> Privacy</li>
+      <li> Terms</li>
+    </nav>
+    &copy; 2014 Instagram
+  </div>
 
 </body>
+
 </html>
