button, link, and layout improvements

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Instagram</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800&display=swap">
 </head>
 
 <body>
@@ -13,15 +14,17 @@
     </div>
 
     <div class="info-container">
+
       <div class="insta-and-button">
         <img src="images/brand.png" alt="brand">
 
-        <div class="login-box">
+        <button type="button">
           <div><img src="images/home.png" alt="home"></div>
           <div>Log in</div>
-        </div>
+        </button>
 
       </div>
+
 
       <div class="main-text">
         <h1>
@@ -44,14 +47,14 @@
   </main>
   <footer>
     <ul>
-      <li>About Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
-      <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
       <li><span>&copy; 2014 Instagram</span></li>
     </ul>
   </footer>
