--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  
+  <div class="main">
+  <div class="box1">
+ <img  id="phones" src="images/phones.png" alt="iPhone">
+  
+</div>
 
-  Capture and Share the World's Moments
+<div class="box2">
+  <div class="logo-login">
+  <img  src="images/brand.png" alt="Brand">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="login">
+  <img  src="images/home.png" alt="Home">
+<p >Log in </p>
+</div>
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div class="box2-text">
+  <div>
 
-  Oh yeah, did we mention it's free?
+  
+  <h1>  Capture and Share the World's Moments
+  </h1>
+</div>
 
-  Download on the App Store
+  <p>
+    Instagram is a fast, beautiful and fun way to share your life with friends and family.
+
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  
+    Oh yeah, did we mention it's free?
+
+    Download on the App Store
   Get it on Google Play
+  </p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <img src="images/badge-iphone.png" alt="badge-iphone">
+  <img src="images/badge-android.png" alt="badge-iphone">
 
-  &copy; 2014 Instagram
+</div>
+
+
+</div>
+
+
+</div>
+
+<footer>
+ <ul>
+   <li> About Us</li> 
+   <li>Support</li> 
+   <li>Blog</li> 
+   <li>Press</li> 
+   <li>API</li> 
+  <li>Jobs</li> 
+    <li>Privacy</li> 
+   <li>Terms</li> 
+   <li>2014 Instagram</li> 
+</ul>
+</footer>
+  
+
 </body>
 </html>
