Add css to html file

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,54 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="stylesheet" href="css/main.css" />
+  
 
-<head>
-  <title>Instagram</title>
-</head>
+  <head>
+    <title>Instagram</title>
+  </head>
 
-<body>
-  <div>
-    <img src="images/phones.png" alt="">
-    <div>
-      <div>
-        <img src="images/" alt="">
+  <body>
+    <section class="flexAll">
+      <img src="images/phones.png" alt="" />
+      <div class="flexContentButton">
+      <div class="flexButtonLogo">
+        <div><img class="logoImg" src="images/brand.png" alt="" /></div>
         <button>
-          <img src="images/home.png" alt="">
+          <div><img src="images/home.png" alt="" /></div>
           <span>Log in</span>
         </button>
       </div>
-      <div>
-        <div>
-          <h1>Capture and Share the World's Moments</h1>
-
-          <p> Instagram is a <span> fast, beautiful </span>and <span> fun </span>way to share your life with friends and
-            family.
-
-            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
-            that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-            Oh yeah, did we mention it's free?</p>
-        </div>
-
+      <div class="content">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>
+          Instagram is a <span> fast, beautiful </span>and <span> fun </span>way
+          to share your life with friends and family. </p>
+          <p> Take a picture or video,
+          choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter,
+          Tumblr and more. It's a new way to see the world. </p>
+          <p> Oh yeah, did we mention it's free?
+        </p>
         <a>
-          <img src="images/badge-iphone.png" alt="">
+          <img src="images/badge-iphone.png" alt="" />
         </a>
         <a>
-          <img src="images/badge-android.png" alt="">
+          <img src="images/badge-android.png" alt="" />
         </a>
       </div>
+      </div>
+      </section>
+      </div>
     </div>
-  </div>
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
-
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </body>
 </html>
