--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,61 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+<div class="main">
 
-  Capture and Share the World's Moments
+  <div class="phones">
+  <img src="images/phones.png" alt="phones">
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="rightSide">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="brand">
+    <div>
+<img src="images/brand.png" alt="brand" id="instaLogo">
+</div>
+<div class="loginButton">
+<a href="" class="loginButton">
+  
+  <div><img src="images/home.png" alt="home"></div>
+  <div><p>Log in</p></div>
+</a>
+</div>
+</div>
 
-  Oh yeah, did we mention it's free?
+<div class="textBlock">
 
-  Download on the App Store
-  Get it on Google Play
+  <h2>Capture and Share the World's Moments</h2>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <article class="text">Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family. <br> <br>
+
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br>
+
+  <br> Oh yeah, did we mention it's free? 
+</article> 
+
+<div class="badges">
+<div class="iphone"><img src="images/badge-iphone.png" alt="Download on iPhone"></div>
+<div class="andorid"><img src="images/badge-android.png" alt="Donwload on Android"></div>
+</div>
+</div>
+</div>
+</div>
+
+<div class="footer">
+ <a href="">About Us</a>
+ <a href="">Support</a>
+ <a href="">Blog</a>
+ <a href="">Press</a>
+ <a href="">API</a>
+ <a href="">Jobs</a>
+ <a href="">Privacy</a>
+ <a href="">Terms</a>
 
   &copy; 2014 Instagram
+</div>
+
 </body>
 </html>
